syntax = "proto3";

option go_package = "gss/gameprompt";

package gameprompt;

service Converse {
    rpc AreYouBusy(AreYouBusyQuestion) returns (AreYouBusyAnswer) {}
    rpc AskQuestion(Question) returns (stream Answer) {}
}

message AreYouBusyQuestion {
    string conn_id = 1;
}

message AreYouBusyAnswer {
    bool busy = 1;
}

message Question {
    string conn_id = 1;
    string character = 2;
    string question = 3;
}

message Answer {
    string answer = 1;
}